<resources>
    <string name="app_name">Selfie</string>
    <string name="title_text">Want to take a selfie?</string>
    <string name="camera_hint">Take a picture!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photoView">photohere</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="image_text">Enter a cool phrase!</string>
    <string name="image_button">Apply</string>
    <string name="filename_text">Enter File Name (Optional)</string>
    <string name="filename_button">Save</string>
    <string name="photo_text">That\'s a cool picture!</string>
    <string name="info_button">Info</string>
    <string name="edit_button">Edit Button</string>
    <string name="gold_star">gold star</string>
    <string name="title_activity_info">Info</string>
    <string name="info_ack">Acknowledgements</string>
    <string name="info_about">About</string>
    <string name="info_creator">Benjamin Glover</string>
    <string name="info_date">01/24/2016</string>
    <string name="info_about_text">This application takes a picture using the front facing camera and saves the image to the device.</string>
    <string name="info_ack_text"><b>These several sources provided instruction and inspiration to achieve the functionally displayed in this application.</b>\n\n
Create the camera preview in the surfaceview variable.\n
  http://www.java2s.com/Code/Android/Hardware/Camerapreview.htm\n\n
Return optimal resolution for camera in surfaceview.\n
  http://stackoverflow.com/questions/19577299/android-camera-preview-stretched\n\n
Retrieve an imageview from a file\n
  http://stackoverflow.com/questions/4181774/show-image-view-from-file-path-in-android\n\n
Rotate a bitmap 90 degrees\n
  http://stackoverflow.com/questions/9015372/how-to-rotate-a-bitmap-90-degrees\n\n
Set a bitmap to imageview.\n
  http://stackoverflow.com/questions/8306623/get-bitmap-attached-to-imageview</string>
</resources>
