<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.benjios.selfie.InfoActivity"
    tools:showIn="@layout/activity_info"
    android:scrollIndicators="right">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/infoTitleView"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_about"
        android:id="@+id/infoAboutView"
        android:singleLine="true"
        android:layout_below="@+id/infoTitleView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/infoAboutText"
        android:layout_alignLeft="@+id/infoAboutView"
        android:layout_alignStart="@+id/infoAboutView"
        android:layout_below="@+id/infoAboutView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_about_text"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_ack"
        android:id="@+id/infoAckView"
        android:layout_below="@+id/infoAboutText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/infoAckText"
        android:layout_above="@+id/infoCreatorView"
        android:layout_alignRight="@+id/infoAboutText"
        android:layout_alignEnd="@+id/infoAboutText"
        android:layout_alignLeft="@+id/infoAboutText"
        android:autoLink="web"
        android:linksClickable="true"
        android:layout_alignStart="@+id/infoAboutText"
        android:text="@string/info_ack_text"
        android:layout_below="@+id/infoAckView"
        android:clickable="true"
        android:allowUndo="false"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/info_creator"
        android:id="@+id/infoCreatorView"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/infoAboutView"
        android:layout_toEndOf="@+id/infoAboutView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/info_date"
        android:id="@+id/infoDateView"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/infoTitleView"
        android:layout_toEndOf="@+id/infoTitleView" />

</RelativeLayout>
